<resources>
    <string name="app_name">FoodFriend</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_the_perfect_dish">Find the perfect dish</string>
    <string name="cancel">Cancel</string>
    <string name="find_the_ingredient">Find the ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="add">Add</string>
    <string name="create_recipe">Create recipe</string>
    <string name="general_data">General data</string>
    <string name="enter_a_recipe_name">Enter a recipe name *</string>
    <string name="enter_a_recipe_description">Enter a recipe description *</string>
    <string name="upload_a_cover_photo">Upload a cover photo</string>
    <string name="next">Next</string>
    <string name="add_an_ingredient">Add an ingredient</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="food_n_friend">Food\nFriend</string>
    <string name="recipe_name">Recipe name</string>
    <string name="_0_minutes">0 minutes</string>
    <string name="_0_ingredients">0 ingredients</string>
    <string name="difficulty">Difficulty</string>
    <string name="portion">portion</string>
    <string name="save_time_shop_ingredients">Save time, shop ingredients</string>
    <string name="build_your_shopping_list_with_foodfriend_then_choose_how_you_want_to_get_your_order_from_grocee">Build your shopping list with FoodFriend, then choose how you want to get your order from Grocee.</string>
    <string name="add_items_to_shopping_list">Add items to shopping list</string>
    <string name="description">Description</string>
    <string name="items_added">Items added!</string>
    <string name="recipes">Recipes</string>
    <string name="shopping_list">Shopping list</string>
    <string name="loading">loading…</string>
    <string name="amount_example">100</string>
    <string name="unit_example">ml</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="home">Home</string>
    <string name="new_recipe">New Recipe</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="account">Account</string>
    <string name="welcome_to_your_n_culinary_hub">Welcome to Your \n Culinary Hub</string>
    <string name="it_is_a_recipe_app_aimed_at_creating_a_convenient_and_efficient_environment_for_meal_planning_and_cooking">It is a recipe app aimed at creating a convenient and efficient environment for meal planning and cooking.</string>
    <string name="developed_by_viktoriia_semenchenko">Developed by Viktoriia Semenchenko</string>
    <string name="about_app">It is a recipe app designed to create a convenient and efficient environment for meal planning and cooking. My goal was to simplify the formation of a shopping list and forget about writing a list with a piece of paper and a pen forever.</string>
    <string name="something_happened">Something happened…</string>
    <string name="server_error_check_your_internet_connection">Server error, check your internet connection and restart application</string>
    <string name="ok">OK</string>
    <string name="you_can_easily_choose_all_these_products_at_grocee_and_have_them_delivered">You can easily choose all these products at Grocee and have them delivered directly to your door</string>
    <string name="go_to_grocee">Go to Grocee</string>
</resources>